--- a/notebooks/if_else.ipynb
+++ b/notebooks/if_else.ipynb
@@ -16,7 +16,9 @@
    "source": [
     "a=5\n",
     "if a>0:\n",
-    "    print('Positive')"
+    "    print('Positive')\n",
+    "else:\n",
+    "    print('Negative')"
    ]
   }
  ],
