#Nested_if_else

--- a/notebooks/if_else.ipynb
+++ b/notebooks/if_else.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,6 +19,39 @@
     "    print('Positive')\n",
     "else:\n",
     "    print('Negative')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please Enter your marks\n",
+      "C\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Please Enter your marks')\n",
+    "mark= int(input())\n",
+    "if mark < 100:\n",
+    "    if mark >= 80 and mark <=99:\n",
+    "      print('A+')\n",
+    "    if mark >=70 and mark <=79:\n",
+    "        print('A')\n",
+    "    if mark >=60 and mark <=69:\n",
+    "        print('B')  \n",
+    "    if mark >=50 and mark <=59:\n",
+    "        print('C')  \n",
+    "    else:\n",
+    "        print('F')\n",
+    "  \n",
+    "else:\n",
+    "    print('Please Enter the number 0 to 99')"
    ]
   }
  ],
